Updated grid layout, fixed issue with table shifting upon Case Details expansion/contraction

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,26 +1,23 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: repeat (12, 1fr);
+  height: 100%;
 }
 
 .container-details-card {
   grid-column: 1 / 1;
-  grid-row: 1 / 5;
+  grid-row: 1 / 12;
   display: flex;
   justify-content: center;
 }
 
 .container-progress-card {
   grid-column: 2 / 2;
-  grid-row: 1 /1;
-  border: 1px solid blue;
-  height: 25vh;
+  grid-row: 1 / 2;
 }
 
 .container-table-card {
   grid-column: 2 / 2;
-  grid-row: 2 / 5;
-  border: 1px solid yellow;
-  height: 75vh;
+  grid-row: 2 / 12;
 }
